Add limit to counter only show number >0

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,9 @@
 /**
 *CSS rules my App
 **/
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
+
+
 body{
     background-color: beige
 }
@@ -18,4 +21,8 @@ body{
 
 .company ul {
     display: none;
+}
+
+.counter{
+    color: blueviolet;
 }
