--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,4 +25,19 @@ body{
 
 .counter{
     color: blueviolet;
+    display: grid;
+    grid-template-columns: 80px 200px auto 40px;
+
+
 }
+
+.form-control{
+    text-align:center;
+}
+
+.btn btn-outline-button{
+    color: blue 
+}
+
+
+
