--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,6 +34,10 @@ body{
 .btn-outline-button{
     background-color: darkgray 
 }
+.input-group-prepend{
+    background-color: darkgray  
+}
+
 
 .alert{
     display: none
