set max fct to number

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,7 +34,8 @@ body{
 .btn-outline-button{
     background-color: darkgray 
 }
-.input-group-prepend{
+
+.input-group{
     background-color: darkgray  
 }
 
